# evident-ledger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FREEZE_REPORT_v0.1.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_CONTRACT.md  docker-compose.yml  evident_revision.sh
.sqlx/: query-0d0e739e2636f0909bd636f21e8fa7764c91dfa94c9b8d377829e8d540ac617e.json  query-0ea16210607ffe54c80a28721abb5be3e84ea43676c70409cd4e853cfe84d9d8.json  query-13e2b18261b6335f1c74ef479e3a61f96770cb5038dbcbca07c760c17a98f15c.json  query-1f6fa7556d8eb1fa2385052d830cf845aace06278ebb5e765c920ebba95ac977.json  query-23f3ff2e5c8451b18810799b6621a7c3f78be105e5bacd68cd650f44a762df57.json  query-372d1549f3739ee05363f98e264a223b0ed500596bcc65894c9361be26074a79.json  query-379c56f08c8e50afcc25d88219739e84ab0c4524899ca255049d921736c3434d.json  query-3eef8bb9b9165218213c3b90718aa5c904cd8323d13cda8b8f9c171dc0957f94.json  query-4d842077d05c5b58e8bb8e3e376d44c78b48187303563185c1f15a2e2bea828a.json  query-67dc30c97bd75834aacf3edc6698b8d95af51d1448ce4ca4161115bc292ad9cd.json  query-694ecafe0ae22688d6232caf0594618f8962ea071074cca26e997e98e7e8120d.json  query-6df044b71feb434ea2622568dedbb11140012660d14c72f2cdcc83536d2768f9.json  query-84329295b2940ea034310a6ba42ffce9a4c2622dc5ed8b898f8317f65c2a56e0.json  query-84e0f36133a043c0612f451f42194d9efbf14a344af7f0eec369cafab6a1efdd.json  query-85dbb1271a9d0269366238a975967ec039904fd7faf15e1cee7bdfcea147e240.json  query-86e3d7bb848af4b9cb460f9c464ba11fc780a334bc8210b70a46755075f377d7.json  query-9b9dcebfcb40db7df1f7f68254dccccf7a3d912d8de32796380dccb4b344c6f2.json  query-a231efca04409fe84179a031d80aa00f106f6da8a1648c5d482b948d98434020.json  query-a6dcfce48f71fe11619c419ce0d8d22f00ebe184dc551e62826064450e962639.json  query-ab17d89a652ccabcb6fc245fb347dca04fb91a979314bb7be34d0fc7856e9de7.json  query-ac7c252565d51bfbbdd1ba2f7b0787832b5001bfc9096a6d9abd76fe0367387d.json  query-b090c418314b736c08b3ddc6b89c1581810d3d4275583888fed8f7bdfa43658c.json  query-b4f455216377ee7b4f60d21a65b7a1d0da67bfb84e50d9d9e8b5673a349f1e4b.json  query-b873ffe356e3bcfdc9af8ba8cdf6cacb55e8669a4f4b6d72cf0bbafb2c594642.json  query-c345474cd8e269a4c1237882fba75d4b05d31c01302cfd01800d32c4bfd6f50d.json  query-d7a881f4c5730d87477eb5f7c53e416b68b42ccc733961affe2efb35dbdfd106.json  query-e2fdaa98e396ad35d134891bace30711c7da1f207f16ab7e773cc93e51d8e648.json
docs/: API.md  API_IMPLEMENTATION_PLAN.md  AUTH_MODEL.md  BILLING_MODEL.md  CLI_INSTALLATION.md  DB_POLICY.md  DEPLOYMENT.md  DEPLOYMENT_FINDINGS.md  DESKTOP_AUTH.md  IDENTITY_MODEL.md  MANUAL_MONITORING.md  PILOT_DEPLOYMENT_CHECKLIST.md  PILOT_ONBOARDING_RUNBOOK.md  PILOT_READINESS_SUMMARY.md  PILOT_SLA_DRAFT.md  ROLLBACK_PROCEDURE.md  SIGNING_KEY_OPERATIONS.md  VERIFY_MODEL.md  cli_product_layer_tz.md  proof_v1.schema.md  testing.md
evident-gui-app/: Cargo.toml
evident-gui-app/src/: desktop_auth.rs  main.rs
evident-report/: Cargo.toml
evident-whitepaper/: Cargo.toml
migrations/: 20260628192818_init.sql  20260628192900_tsa_tokens.sql  20260628202432_add_sequence_to_events.sql  20260706093531_add_file_hash_index.sql  20260715120000_accounts_and_api_keys.sql  20260715220000_backups.sql  20260716000000_tariff_plans_and_billing.sql  20260717000000_idempotency_records.sql  20260717104600_events_chain_sequence_unique.sql  20260717120000_public_proofs.sql  20260717140000_public_disclosure_boundary.sql  20260718103000_api_key_prefix.sql  20260718110000_legacy_key_prefix_sentinel.sql  20260718120000_add_billing_period_and_pending_plan.sql  20260718130000_remove_legacy_tariff_tier.sql  20260718140000_paddle_webhook_events.sql  20260718141000_add_paddle_subscription_metadata.sql  20260718142000_add_tariff_priority.sql  20260718150000_add_web_auth.sql  20260718160000_add_paddle_linking_state.sql  20260718170000_create_identity_keys.sql  20260718180000_create_identity_challenges.sql  20260718190000_add_identity_signature_to_events.sql  20260718200000_create_identity_audit_events.sql  20260723213000_desktop_tokens.sql
src/: audit.rs  auth.rs  client.rs  config.rs  db.rs  freeze.rs  hash_attestation.rs  hash_attestation_pdf.rs  lib.rs  main.rs  main.rs.bak  merkle.rs  product.rs  proof_format.rs  public_certificate_pdf.rs  public_proof.rs  public_verification_audit.rs  public_verify_validation.rs  sac.rs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+179 files in other folders)
