[package]
name = "evident-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evident-gui"
path = "src/main.rs"

[dependencies]
evident-ledger = { path = ".." }
evident-report = { path = "../evident-report" }
notary-pdf = { path = "../vendor/notary-pdf" }
eframe = "0.35.0"
egui = "0.35.0"
rfd = "0.17.2"
dirs = "6.0.0"
zip = "8.6.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
